Admin | Experiment with CMS config

--- a/src/pages/posts/2021-08-10-chomp.md
+++ b/src/pages/posts/2021-08-10-chomp.md
@@ -1,6 +1,7 @@
 ---
 order: 1
 type: Event
+layout: '@layouts/PostLayout.astro'
 title: CHOMP!
 subtitle: Eat Well Live Well
 image_url: https://www.chomplocal.org/wp-content/uploads/2021/06/CHOMP-Site-1200x628-1.png?uupdatedAt=1628230081389
